# ethsnarks-emscripten

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  notes.txt
test/: test_emscripten_stuff.cpp
